--- a/page-new-buildings.html
+++ b/page-new-buildings.html
@@ -426,58 +426,6 @@
         <div class="container">
 
           <ul class="products__list">
-            <li>
-              <article class="product">
-
-                <div class="swiper product__slider">
-                  <!-- Additional required wrapper -->
-                  <div class="swiper-wrapper">
-                    <!-- Slides -->
-                    <div class="swiper-slide">
-                      <img src="./img/img-product-1.png" alt="">
-                    </div>
-                    <div class="swiper-slide">
-                      <img src="./img/img-product-2.png" alt="">
-                    </div>
-                    <div class="swiper-slide">
-                      <img src="./img/img-product-1.png" alt="">
-                    </div>
-
-                  </div>
-
-                  <div class="swiper-pagination"></div>
-
-                </div>
-
-                <div class="product__info">
-                  <div class="product__row">
-                    <h3 class="product__title">New World</h3>
-                    <span class="product__price">2 000р/сут</span>
-                  </div>
-                  <div class="product__address">ул. Академика 17</div>
-                  <p class="product__descr">
-                    Какое то интересное описание квартиры, что есть, сколько до метро и так далее
-                  </p>
-                  <div class="product__btn">
-                    <button class="btn btn--secondary" data-hystmodal="#form-request-modal">
-                      <svg width="12" height="24" aria-hidden="true">
-                        <use xlink:href="img/sprite.svg#icon-slider-next"></use>
-                      </svg>
-                    </button>
-                    Получить консультацию
-                  </div>
-                </div>
-
-                <ul class="product__list">
-                  <li class="product__item product__item--diskount">
-                    Скидки в офисе
-                  </li>
-                  <li class="product__item">
-                    Готовая квартира
-                  </li>
-                </ul>
-              </article>
-            </li>
 
             <li>
               <article class="product">
@@ -498,34 +446,35 @@
 
                   </div>
 
-                  <div class="swiper-pagination"></div>
+
 
                 </div>
 
                 <div class="product__info">
-                  <div class="product__row">
-                    <h3 class="product__title">New World</h3>
-                    <span class="product__price">2 000р/сут</span>
+
+                  <div class="product__middle">
+                    <div class="swiper-pagination"></div>
+                    <div class="product__row">
+                      <h3 class="product__title">Loft House</h3>
+                      <span class="product__price">от 3.3 млн ₽</span>
+                    </div>
+                    <div class="product__additional">273 квартиры в продаже</div>
                   </div>
-                  <div class="product__address">ул. Академика 17</div>
-                  <p class="product__descr">
-                    Какое то интересное описание квартиры, что есть, сколько до метро и так далее
-                  </p>
-                  <div class="product__btn">
-                    <button class="btn btn--secondary" data-hystmodal="#form-request-modal">
-                      <svg width="12" height="24" aria-hidden="true">
-                        <use xlink:href="img/sprite.svg#icon-slider-next"></use>
-                      </svg>
-                    </button>
-                    Получить консультацию
+                  <div class="product__bottom">
+                    <p class="product__descr">
+                      Какое то интересное описание квартиры, что есть, сколько до метро и так далее
+                    </p>
+                    <div class="product__btn">
+                      <button class="btn btn--secondary" data-hystmodal="#form-request-modal">
+                        <svg width="12" height="24" aria-hidden="true">
+                          <use xlink:href="img/sprite.svg#icon-slider-next"></use>
+                        </svg>
+                      </button>
+                      Получить консультацию
+                    </div>
                   </div>
                 </div>
 
-                <ul class="product__list">
-                  <li class="product__item product__item--diskount">
-                    Скидки в офисе
-                  </li>
-                </ul>
               </article>
             </li>
 
@@ -548,34 +497,35 @@
 
                   </div>
 
-                  <div class="swiper-pagination"></div>
+
 
                 </div>
 
                 <div class="product__info">
-                  <div class="product__row">
-                    <h3 class="product__title">New World</h3>
-                    <span class="product__price">2 000р/сут</span>
+
+                  <div class="product__middle">
+                    <div class="swiper-pagination"></div>
+                    <div class="product__row">
+                      <h3 class="product__title">New World</h3>
+                      <span class="product__price">от 3.3 млн ₽</span>
+                    </div>
+                    <div class="product__additional">ул. Академика 17</div>
                   </div>
-                  <div class="product__address">ул. Академика 17</div>
-                  <p class="product__descr">
-                    Какое то интересное описание квартиры, что есть, сколько до метро и так далее
-                  </p>
-                  <div class="product__btn">
-                    <button class="btn btn--secondary" data-hystmodal="#form-request-modal">
-                      <svg width="12" height="24" aria-hidden="true">
-                        <use xlink:href="img/sprite.svg#icon-slider-next"></use>
-                      </svg>
-                    </button>
-                    Получить консультацию
+                  <div class="product__bottom">
+                    <p class="product__descr">
+                      Какое то интересное описание квартиры, что есть, сколько до метро и так далее
+                    </p>
+                    <div class="product__btn">
+                      <button class="btn btn--secondary" data-hystmodal="#form-request-modal">
+                        <svg width="12" height="24" aria-hidden="true">
+                          <use xlink:href="img/sprite.svg#icon-slider-next"></use>
+                        </svg>
+                      </button>
+                      Получить консультацию
+                    </div>
                   </div>
                 </div>
 
-                <ul class="product__list">
-                  <li class="product__item">
-                    Готовая квартира
-                  </li>
-                </ul>
               </article>
             </li>
 
@@ -598,28 +548,86 @@
 
                   </div>
 
-                  <div class="swiper-pagination"></div>
+
 
                 </div>
 
                 <div class="product__info">
-                  <div class="product__row">
-                    <h3 class="product__title">New World</h3>
-                    <span class="product__price">2 000р/сут</span>
+
+                  <div class="product__middle">
+                    <div class="swiper-pagination"></div>
+                    <div class="product__row">
+                      <h3 class="product__title">New World</h3>
+                      <span class="product__price">от 4 млн ₽</span>
+                    </div>
+                    <div class="product__additional">273 квартиры в продаже</div>
                   </div>
-                  <div class="product__address">ул. Академика 17</div>
-                  <p class="product__descr">
-                    Какое то интересное описание квартиры, что есть, сколько до метро и так далее
-                  </p>
-                  <div class="product__btn">
-                    <button class="btn btn--secondary" data-hystmodal="#form-request-modal">
-                      <svg width="12" height="24" aria-hidden="true">
-                        <use xlink:href="img/sprite.svg#icon-slider-next"></use>
-                      </svg>
-                    </button>
-                    Получить консультацию
+                  <div class="product__bottom">
+                    <p class="product__descr">
+                      Какое то интересное описание квартиры, что есть, сколько до метро и так далее
+                    </p>
+                    <div class="product__btn">
+                      <button class="btn btn--secondary" data-hystmodal="#form-request-modal">
+                        <svg width="12" height="24" aria-hidden="true">
+                          <use xlink:href="img/sprite.svg#icon-slider-next"></use>
+                        </svg>
+                      </button>
+                      Получить консультацию
+                    </div>
                   </div>
                 </div>
+
+              </article>
+            </li>
+
+            <li>
+              <article class="product">
+
+                <div class="swiper product__slider">
+                  <!-- Additional required wrapper -->
+                  <div class="swiper-wrapper">
+                    <!-- Slides -->
+                    <div class="swiper-slide">
+                      <img src="./img/img-product-2.png" alt="">
+                    </div>
+                    <div class="swiper-slide">
+                      <img src="./img/img-product-1.png" alt="">
+                    </div>
+                    <div class="swiper-slide">
+                      <img src="./img/img-product-2.png" alt="">
+                    </div>
+
+                  </div>
+
+
+
+                </div>
+
+                <div class="product__info">
+
+                  <div class="product__middle">
+                    <div class="swiper-pagination"></div>
+                    <div class="product__row">
+                      <h3 class="product__title">Loft House</h3>
+                      <span class="product__price">от 3.3 млн ₽</span>
+                    </div>
+                    <div class="product__additional">273 квартиры в продаже</div>
+                  </div>
+                  <div class="product__bottom">
+                    <p class="product__descr">
+                      Какое то интересное описание квартиры, что есть, сколько до метро и так далее
+                    </p>
+                    <div class="product__btn">
+                      <button class="btn btn--secondary" data-hystmodal="#form-request-modal">
+                        <svg width="12" height="24" aria-hidden="true">
+                          <use xlink:href="img/sprite.svg#icon-slider-next"></use>
+                        </svg>
+                      </button>
+                      Получить консультацию
+                    </div>
+                  </div>
+                </div>
+
               </article>
             </li>
 
@@ -642,28 +650,35 @@
 
                   </div>
 
-                  <div class="swiper-pagination"></div>
+
 
                 </div>
 
                 <div class="product__info">
-                  <div class="product__row">
-                    <h3 class="product__title">New World</h3>
-                    <span class="product__price">2 000р/сут</span>
+
+                  <div class="product__middle">
+                    <div class="swiper-pagination"></div>
+                    <div class="product__row">
+                      <h3 class="product__title">New World</h3>
+                      <span class="product__price">от 4 млн ₽</span>
+                    </div>
+                    <div class="product__additional">273 квартиры в продаже</div>
                   </div>
-                  <div class="product__address">ул. Академика 17</div>
-                  <p class="product__descr">
-                    Какое то интересное описание квартиры, что есть, сколько до метро и так далее
-                  </p>
-                  <div class="product__btn">
-                    <button class="btn btn--secondary" data-hystmodal="#form-request-modal">
-                      <svg width="12" height="24" aria-hidden="true">
-                        <use xlink:href="img/sprite.svg#icon-slider-next"></use>
-                      </svg>
-                    </button>
-                    Получить консультацию
+                  <div class="product__bottom">
+                    <p class="product__descr">
+                      Какое то интересное описание квартиры, что есть, сколько до метро и так далее
+                    </p>
+                    <div class="product__btn">
+                      <button class="btn btn--secondary" data-hystmodal="#form-request-modal">
+                        <svg width="12" height="24" aria-hidden="true">
+                          <use xlink:href="img/sprite.svg#icon-slider-next"></use>
+                        </svg>
+                      </button>
+                      Получить консультацию
+                    </div>
                   </div>
                 </div>
+
               </article>
             </li>
 
@@ -686,28 +701,35 @@
 
                   </div>
 
-                  <div class="swiper-pagination"></div>
+
 
                 </div>
 
                 <div class="product__info">
-                  <div class="product__row">
-                    <h3 class="product__title">New World</h3>
-                    <span class="product__price">2 000р/сут</span>
+
+                  <div class="product__middle">
+                    <div class="swiper-pagination"></div>
+                    <div class="product__row">
+                      <h3 class="product__title">New World</h3>
+                      <span class="product__price">от 4 млн ₽</span>
+                    </div>
+                    <div class="product__additional">273 квартиры в продаже</div>
                   </div>
-                  <div class="product__address">ул. Академика 17</div>
-                  <p class="product__descr">
-                    Какое то интересное описание квартиры, что есть, сколько до метро и так далее
-                  </p>
-                  <div class="product__btn">
-                    <button class="btn btn--secondary" data-hystmodal="#form-request-modal">
-                      <svg width="12" height="24" aria-hidden="true">
-                        <use xlink:href="img/sprite.svg#icon-slider-next"></use>
-                      </svg>
-                    </button>
-                    Получить консультацию
+                  <div class="product__bottom">
+                    <p class="product__descr">
+                      Какое то интересное описание квартиры, что есть, сколько до метро и так далее
+                    </p>
+                    <div class="product__btn">
+                      <button class="btn btn--secondary" data-hystmodal="#form-request-modal">
+                        <svg width="12" height="24" aria-hidden="true">
+                          <use xlink:href="img/sprite.svg#icon-slider-next"></use>
+                        </svg>
+                      </button>
+                      Получить консультацию
+                    </div>
                   </div>
                 </div>
+
               </article>
             </li>
 
