--- a/page-apartment-rent.html
+++ b/page-apartment-rent.html
@@ -157,7 +157,7 @@
             <div class="filter__item d-sm-none">
 
               <div class="filter__title">
-                Вид недвижимости
+                Срок аренды
               </div>
 
               <ul class="filter__list">
@@ -165,7 +165,7 @@
                 <li>
                   <label class="filter__checkbox-btn">
                     <input type="checkbox">
-                    <span>жилое</span>
+                    <span>посуточно</span>
                   </label>
 
                 </li>
@@ -173,7 +173,7 @@
                 <li>
                   <label class="filter__checkbox-btn">
                     <input type="checkbox">
-                    <span>коммерция</span>
+                    <span>надолго</span>
                   </label>
                 </li>
 
@@ -288,6 +288,58 @@
         <div class="container">
 
           <ul class="products__list">
+
+            <li>
+              <article class="product">
+
+                <div class="swiper product__slider">
+                  <!-- Additional required wrapper -->
+                  <div class="swiper-wrapper">
+                    <!-- Slides -->
+                    <div class="swiper-slide">
+                      <img src="./img/img-product-2.png" alt="">
+                    </div>
+                    <div class="swiper-slide">
+                      <img src="./img/img-product-1.png" alt="">
+                    </div>
+                    <div class="swiper-slide">
+                      <img src="./img/img-product-2.png" alt="">
+                    </div>
+
+                  </div>
+
+
+
+                </div>
+
+                <div class="product__info">
+
+                  <div class="product__middle">
+                    <div class="swiper-pagination"></div>
+                    <div class="product__row">
+                      <h3 class="product__title">Loft House</h3>
+                      <span class="product__price">2 000р/сут</span>
+                    </div>
+                    <div class="product__additional">ул. Академика 17</div>
+                  </div>
+                  <div class="product__bottom">
+                    <p class="product__descr">
+                      Какое то интересное описание квартиры, что есть, сколько до метро и так далее
+                    </p>
+                    <div class="product__btn">
+                      <button class="btn btn--secondary" data-hystmodal="#form-request-modal">
+                        <svg width="12" height="24" aria-hidden="true">
+                          <use xlink:href="img/sprite.svg#icon-slider-next"></use>
+                        </svg>
+                      </button>
+                      Получить консультацию
+                    </div>
+                  </div>
+                </div>
+
+              </article>
+            </li>
+
             <li>
               <article class="product">
 
@@ -307,29 +359,85 @@
 
                   </div>
 
-                  <div class="swiper-pagination"></div>
+
 
                 </div>
 
                 <div class="product__info">
-                  <div class="product__row">
-                    <h3 class="product__title">New World</h3>
-                    <span class="product__price">2 000р/сут</span>
+
+                  <div class="product__middle">
+                    <div class="swiper-pagination"></div>
+                    <div class="product__row">
+                      <h3 class="product__title">New World</h3>
+                      <span class="product__price">2 000р/сут</span>
+                    </div>
+                    <div class="product__additional">ул. Академика 17</div>
                   </div>
-                  <div class="product__address">ул. Академика 17</div>
-                  <p class="product__descr">
-                    Какое то интересное описание квартиры, что есть, сколько до метро и так далее
-                  </p>
-                  <div class="product__btn">
-                    <button class="btn btn--secondary" data-hystmodal="#form-request-modal">
-                      <svg width="12" height="24" aria-hidden="true">
-                        <use xlink:href="img/sprite.svg#icon-slider-next"></use>
-                      </svg>
-                    </button>
-                    Получить консультацию
+                  <div class="product__bottom">
+                    <p class="product__descr">
+                      Какое то интересное описание квартиры, что есть, сколько до метро и так далее
+                    </p>
+                    <div class="product__btn">
+                      <button class="btn btn--secondary" data-hystmodal="#form-request-modal">
+                        <svg width="12" height="24" aria-hidden="true">
+                          <use xlink:href="img/sprite.svg#icon-slider-next"></use>
+                        </svg>
+                      </button>
+                      Получить консультацию
+                    </div>
                   </div>
                 </div>
 
+              </article>
+            </li>
+
+            <li>
+              <article class="product">
+
+                <div class="swiper product__slider">
+                  <!-- Additional required wrapper -->
+                  <div class="swiper-wrapper">
+                    <!-- Slides -->
+                    <div class="swiper-slide">
+                      <img src="./img/img-product-1.png" alt="">
+                    </div>
+                    <div class="swiper-slide">
+                      <img src="./img/img-product-2.png" alt="">
+                    </div>
+                    <div class="swiper-slide">
+                      <img src="./img/img-product-1.png" alt="">
+                    </div>
+
+                  </div>
+
+
+
+                </div>
+
+                <div class="product__info">
+
+                  <div class="product__middle">
+                    <div class="swiper-pagination"></div>
+                    <div class="product__row">
+                      <h3 class="product__title">New World</h3>
+                      <span class="product__price">2 000р/сут</span>
+                    </div>
+                    <div class="product__additional">ул. Академика 17</div>
+                  </div>
+                  <div class="product__bottom">
+                    <p class="product__descr">
+                      Какое то интересное описание квартиры, что есть, сколько до метро и так далее
+                    </p>
+                    <div class="product__btn">
+                      <button class="btn btn--secondary" data-hystmodal="#form-request-modal">
+                        <svg width="12" height="24" aria-hidden="true">
+                          <use xlink:href="img/sprite.svg#icon-slider-next"></use>
+                        </svg>
+                      </button>
+                      Получить консультацию
+                    </div>
+                  </div>
+                </div>
 
               </article>
             </li>
@@ -353,28 +461,35 @@
 
                   </div>
 
-                  <div class="swiper-pagination"></div>
+
 
                 </div>
 
                 <div class="product__info">
-                  <div class="product__row">
-                    <h3 class="product__title">New World</h3>
-                    <span class="product__price">2 000р/сут</span>
+
+                  <div class="product__middle">
+                    <div class="swiper-pagination"></div>
+                    <div class="product__row">
+                      <h3 class="product__title">Loft House</h3>
+                      <span class="product__price">2 000р/сут</span>
+                    </div>
+                    <div class="product__additional">ул. Академика 17</div>
                   </div>
-                  <div class="product__address">ул. Академика 17</div>
-                  <p class="product__descr">
-                    Какое то интересное описание квартиры, что есть, сколько до метро и так далее
-                  </p>
-                  <div class="product__btn">
-                    <button class="btn btn--secondary" data-hystmodal="#form-request-modal">
-                      <svg width="12" height="24" aria-hidden="true">
-                        <use xlink:href="img/sprite.svg#icon-slider-next"></use>
-                      </svg>
-                    </button>
-                    Получить консультацию
+                  <div class="product__bottom">
+                    <p class="product__descr">
+                      Какое то интересное описание квартиры, что есть, сколько до метро и так далее
+                    </p>
+                    <div class="product__btn">
+                      <button class="btn btn--secondary" data-hystmodal="#form-request-modal">
+                        <svg width="12" height="24" aria-hidden="true">
+                          <use xlink:href="img/sprite.svg#icon-slider-next"></use>
+                        </svg>
+                      </button>
+                      Получить консультацию
+                    </div>
                   </div>
                 </div>
+
               </article>
             </li>
 
@@ -397,28 +512,35 @@
 
                   </div>
 
-                  <div class="swiper-pagination"></div>
+
 
                 </div>
 
                 <div class="product__info">
-                  <div class="product__row">
-                    <h3 class="product__title">New World</h3>
-                    <span class="product__price">2 000р/сут</span>
+
+                  <div class="product__middle">
+                    <div class="swiper-pagination"></div>
+                    <div class="product__row">
+                      <h3 class="product__title">New World</h3>
+                      <span class="product__price">2 000р/сут</span>
+                    </div>
+                    <div class="product__additional">ул. Академика 17</div>
                   </div>
-                  <div class="product__address">ул. Академика 17</div>
-                  <p class="product__descr">
-                    Какое то интересное описание квартиры, что есть, сколько до метро и так далее
-                  </p>
-                  <div class="product__btn">
-                    <button class="btn btn--secondary" data-hystmodal="#form-request-modal">
-                      <svg width="12" height="24" aria-hidden="true">
-                        <use xlink:href="img/sprite.svg#icon-slider-next"></use>
-                      </svg>
-                    </button>
-                    Получить консультацию
+                  <div class="product__bottom">
+                    <p class="product__descr">
+                      Какое то интересное описание квартиры, что есть, сколько до метро и так далее
+                    </p>
+                    <div class="product__btn">
+                      <button class="btn btn--secondary" data-hystmodal="#form-request-modal">
+                        <svg width="12" height="24" aria-hidden="true">
+                          <use xlink:href="img/sprite.svg#icon-slider-next"></use>
+                        </svg>
+                      </button>
+                      Получить консультацию
+                    </div>
                   </div>
                 </div>
+
               </article>
             </li>
 
@@ -441,116 +563,35 @@
 
                   </div>
 
-                  <div class="swiper-pagination"></div>
+
 
                 </div>
 
                 <div class="product__info">
-                  <div class="product__row">
-                    <h3 class="product__title">New World</h3>
-                    <span class="product__price">2 000р/сут</span>
+
+                  <div class="product__middle">
+                    <div class="swiper-pagination"></div>
+                    <div class="product__row">
+                      <h3 class="product__title">New World</h3>
+                      <span class="product__price">2 000р/сут</span>
+                    </div>
+                    <div class="product__additional">ул. Академика 17</div>
                   </div>
-                  <div class="product__address">ул. Академика 17</div>
-                  <p class="product__descr">
-                    Какое то интересное описание квартиры, что есть, сколько до метро и так далее
-                  </p>
-                  <div class="product__btn">
-                    <button class="btn btn--secondary" data-hystmodal="#form-request-modal">
-                      <svg width="12" height="24" aria-hidden="true">
-                        <use xlink:href="img/sprite.svg#icon-slider-next"></use>
-                      </svg>
-                    </button>
-                    Получить консультацию
+                  <div class="product__bottom">
+                    <p class="product__descr">
+                      Какое то интересное описание квартиры, что есть, сколько до метро и так далее
+                    </p>
+                    <div class="product__btn">
+                      <button class="btn btn--secondary" data-hystmodal="#form-request-modal">
+                        <svg width="12" height="24" aria-hidden="true">
+                          <use xlink:href="img/sprite.svg#icon-slider-next"></use>
+                        </svg>
+                      </button>
+                      Получить консультацию
+                    </div>
                   </div>
                 </div>
-              </article>
-            </li>
 
-            <li>
-              <article class="product">
-
-                <div class="swiper product__slider">
-                  <!-- Additional required wrapper -->
-                  <div class="swiper-wrapper">
-                    <!-- Slides -->
-                    <div class="swiper-slide">
-                      <img src="./img/img-product-1.png" alt="">
-                    </div>
-                    <div class="swiper-slide">
-                      <img src="./img/img-product-2.png" alt="">
-                    </div>
-                    <div class="swiper-slide">
-                      <img src="./img/img-product-1.png" alt="">
-                    </div>
-
-                  </div>
-
-                  <div class="swiper-pagination"></div>
-
-                </div>
-
-                <div class="product__info">
-                  <div class="product__row">
-                    <h3 class="product__title">New World</h3>
-                    <span class="product__price">2 000р/сут</span>
-                  </div>
-                  <div class="product__address">ул. Академика 17</div>
-                  <p class="product__descr">
-                    Какое то интересное описание квартиры, что есть, сколько до метро и так далее
-                  </p>
-                  <div class="product__btn">
-                    <button class="btn btn--secondary" data-hystmodal="#form-request-modal">
-                      <svg width="12" height="24" aria-hidden="true">
-                        <use xlink:href="img/sprite.svg#icon-slider-next"></use>
-                      </svg>
-                    </button>
-                    Получить консультацию
-                  </div>
-                </div>
-              </article>
-            </li>
-
-            <li>
-              <article class="product">
-
-                <div class="swiper product__slider">
-                  <!-- Additional required wrapper -->
-                  <div class="swiper-wrapper">
-                    <!-- Slides -->
-                    <div class="swiper-slide">
-                      <img src="./img/img-product-1.png" alt="">
-                    </div>
-                    <div class="swiper-slide">
-                      <img src="./img/img-product-2.png" alt="">
-                    </div>
-                    <div class="swiper-slide">
-                      <img src="./img/img-product-1.png" alt="">
-                    </div>
-
-                  </div>
-
-                  <div class="swiper-pagination"></div>
-
-                </div>
-
-                <div class="product__info">
-                  <div class="product__row">
-                    <h3 class="product__title">New World</h3>
-                    <span class="product__price">2 000р/сут</span>
-                  </div>
-                  <div class="product__address">ул. Академика 17</div>
-                  <p class="product__descr">
-                    Какое то интересное описание квартиры, что есть, сколько до метро и так далее
-                  </p>
-                  <div class="product__btn">
-                    <button class="btn btn--secondary" data-hystmodal="#form-request-modal">
-                      <svg width="12" height="24" aria-hidden="true">
-                        <use xlink:href="img/sprite.svg#icon-slider-next"></use>
-                      </svg>
-                    </button>
-                    Получить консультацию
-                  </div>
-                </div>
               </article>
             </li>
 
