--- a/src/html/pages/apartment-rent/products.html
+++ b/src/html/pages/apartment-rent/products.html
@@ -2,6 +2,7 @@
   <div class="container">
 
     <ul class="products__list">
+
       <li>
         <article class="product">
 
@@ -24,32 +25,37 @@
 
             </div>
 
-            <div class="swiper-pagination"></div>
+
 
           </div>
 
           <div class="product__info">
-            <div class="product__row">
-              <h3 class="product__title">New World</h3>
-              <span class="product__price">2 000р/сут</span>
+
+            <div class="product__middle">
+              <div class="swiper-pagination"></div>
+              <div class="product__row">
+                <h3 class="product__title">Loft House</h3>
+                <span class="product__price">2 000р/сут</span>
+              </div>
+              <div class="product__additional">ул. Академика 17</div>
             </div>
-            <div class="product__address">ул. Академика 17</div>
-            <p class="product__descr">
-              Какое то интересное описание квартиры, что есть, сколько до метро и так далее
-            </p>
-            <div class="product__btn">
-              <button class="btn btn--secondary"
-                      data-hystmodal="#form-request-modal">
-                <svg width="12"
-                     height="24"
-                     aria-hidden="true">
-                  <use xlink:href="img/sprite.svg#icon-slider-next"></use>
-                </svg>
-              </button>
-              Получить консультацию
+            <div class="product__bottom">
+              <p class="product__descr">
+                Какое то интересное описание квартиры, что есть, сколько до метро и так далее
+              </p>
+              <div class="product__btn">
+                <button class="btn btn--secondary"
+                        data-hystmodal="#form-request-modal">
+                  <svg width="12"
+                       height="24"
+                       aria-hidden="true">
+                    <use xlink:href="img/sprite.svg#icon-slider-next"></use>
+                  </svg>
+                </button>
+                Получить консультацию
+              </div>
             </div>
           </div>
-
 
         </article>
       </li>
@@ -76,31 +82,38 @@
 
             </div>
 
-            <div class="swiper-pagination"></div>
+
 
           </div>
 
           <div class="product__info">
-            <div class="product__row">
-              <h3 class="product__title">New World</h3>
-              <span class="product__price">2 000р/сут</span>
+
+            <div class="product__middle">
+              <div class="swiper-pagination"></div>
+              <div class="product__row">
+                <h3 class="product__title">New World</h3>
+                <span class="product__price">2 000р/сут</span>
+              </div>
+              <div class="product__additional">ул. Академика 17</div>
             </div>
-            <div class="product__address">ул. Академика 17</div>
-            <p class="product__descr">
-              Какое то интересное описание квартиры, что есть, сколько до метро и так далее
-            </p>
-            <div class="product__btn">
-              <button class="btn btn--secondary"
-                      data-hystmodal="#form-request-modal">
-                <svg width="12"
-                     height="24"
-                     aria-hidden="true">
-                  <use xlink:href="img/sprite.svg#icon-slider-next"></use>
-                </svg>
-              </button>
-              Получить консультацию
+            <div class="product__bottom">
+              <p class="product__descr">
+                Какое то интересное описание квартиры, что есть, сколько до метро и так далее
+              </p>
+              <div class="product__btn">
+                <button class="btn btn--secondary"
+                        data-hystmodal="#form-request-modal">
+                  <svg width="12"
+                       height="24"
+                       aria-hidden="true">
+                    <use xlink:href="img/sprite.svg#icon-slider-next"></use>
+                  </svg>
+                </button>
+                Получить консультацию
+              </div>
             </div>
           </div>
+
         </article>
       </li>
 
@@ -126,31 +139,38 @@
 
             </div>
 
-            <div class="swiper-pagination"></div>
+
 
           </div>
 
           <div class="product__info">
-            <div class="product__row">
-              <h3 class="product__title">New World</h3>
-              <span class="product__price">2 000р/сут</span>
+
+            <div class="product__middle">
+              <div class="swiper-pagination"></div>
+              <div class="product__row">
+                <h3 class="product__title">New World</h3>
+                <span class="product__price">2 000р/сут</span>
+              </div>
+              <div class="product__additional">ул. Академика 17</div>
             </div>
-            <div class="product__address">ул. Академика 17</div>
-            <p class="product__descr">
-              Какое то интересное описание квартиры, что есть, сколько до метро и так далее
-            </p>
-            <div class="product__btn">
-              <button class="btn btn--secondary"
-                      data-hystmodal="#form-request-modal">
-                <svg width="12"
-                     height="24"
-                     aria-hidden="true">
-                  <use xlink:href="img/sprite.svg#icon-slider-next"></use>
-                </svg>
-              </button>
-              Получить консультацию
+            <div class="product__bottom">
+              <p class="product__descr">
+                Какое то интересное описание квартиры, что есть, сколько до метро и так далее
+              </p>
+              <div class="product__btn">
+                <button class="btn btn--secondary"
+                        data-hystmodal="#form-request-modal">
+                  <svg width="12"
+                       height="24"
+                       aria-hidden="true">
+                    <use xlink:href="img/sprite.svg#icon-slider-next"></use>
+                  </svg>
+                </button>
+                Получить консультацию
+              </div>
             </div>
           </div>
+
         </article>
       </li>
 
@@ -176,31 +196,38 @@
 
             </div>
 
-            <div class="swiper-pagination"></div>
+
 
           </div>
 
           <div class="product__info">
-            <div class="product__row">
-              <h3 class="product__title">New World</h3>
-              <span class="product__price">2 000р/сут</span>
+
+            <div class="product__middle">
+              <div class="swiper-pagination"></div>
+              <div class="product__row">
+                <h3 class="product__title">Loft House</h3>
+                <span class="product__price">2 000р/сут</span>
+              </div>
+              <div class="product__additional">ул. Академика 17</div>
             </div>
-            <div class="product__address">ул. Академика 17</div>
-            <p class="product__descr">
-              Какое то интересное описание квартиры, что есть, сколько до метро и так далее
-            </p>
-            <div class="product__btn">
-              <button class="btn btn--secondary"
-                      data-hystmodal="#form-request-modal">
-                <svg width="12"
-                     height="24"
-                     aria-hidden="true">
-                  <use xlink:href="img/sprite.svg#icon-slider-next"></use>
-                </svg>
-              </button>
-              Получить консультацию
+            <div class="product__bottom">
+              <p class="product__descr">
+                Какое то интересное описание квартиры, что есть, сколько до метро и так далее
+              </p>
+              <div class="product__btn">
+                <button class="btn btn--secondary"
+                        data-hystmodal="#form-request-modal">
+                  <svg width="12"
+                       height="24"
+                       aria-hidden="true">
+                    <use xlink:href="img/sprite.svg#icon-slider-next"></use>
+                  </svg>
+                </button>
+                Получить консультацию
+              </div>
             </div>
           </div>
+
         </article>
       </li>
 
@@ -226,31 +253,38 @@
 
             </div>
 
-            <div class="swiper-pagination"></div>
+
 
           </div>
 
           <div class="product__info">
-            <div class="product__row">
-              <h3 class="product__title">New World</h3>
-              <span class="product__price">2 000р/сут</span>
+
+            <div class="product__middle">
+              <div class="swiper-pagination"></div>
+              <div class="product__row">
+                <h3 class="product__title">New World</h3>
+                <span class="product__price">2 000р/сут</span>
+              </div>
+              <div class="product__additional">ул. Академика 17</div>
             </div>
-            <div class="product__address">ул. Академика 17</div>
-            <p class="product__descr">
-              Какое то интересное описание квартиры, что есть, сколько до метро и так далее
-            </p>
-            <div class="product__btn">
-              <button class="btn btn--secondary"
-                      data-hystmodal="#form-request-modal">
-                <svg width="12"
-                     height="24"
-                     aria-hidden="true">
-                  <use xlink:href="img/sprite.svg#icon-slider-next"></use>
-                </svg>
-              </button>
-              Получить консультацию
+            <div class="product__bottom">
+              <p class="product__descr">
+                Какое то интересное описание квартиры, что есть, сколько до метро и так далее
+              </p>
+              <div class="product__btn">
+                <button class="btn btn--secondary"
+                        data-hystmodal="#form-request-modal">
+                  <svg width="12"
+                       height="24"
+                       aria-hidden="true">
+                    <use xlink:href="img/sprite.svg#icon-slider-next"></use>
+                  </svg>
+                </button>
+                Получить консультацию
+              </div>
             </div>
           </div>
+
         </article>
       </li>
 
@@ -276,31 +310,38 @@
 
             </div>
 
-            <div class="swiper-pagination"></div>
+
 
           </div>
 
           <div class="product__info">
-            <div class="product__row">
-              <h3 class="product__title">New World</h3>
-              <span class="product__price">2 000р/сут</span>
+
+            <div class="product__middle">
+              <div class="swiper-pagination"></div>
+              <div class="product__row">
+                <h3 class="product__title">New World</h3>
+                <span class="product__price">2 000р/сут</span>
+              </div>
+              <div class="product__additional">ул. Академика 17</div>
             </div>
-            <div class="product__address">ул. Академика 17</div>
-            <p class="product__descr">
-              Какое то интересное описание квартиры, что есть, сколько до метро и так далее
-            </p>
-            <div class="product__btn">
-              <button class="btn btn--secondary"
-                      data-hystmodal="#form-request-modal">
-                <svg width="12"
-                     height="24"
-                     aria-hidden="true">
-                  <use xlink:href="img/sprite.svg#icon-slider-next"></use>
-                </svg>
-              </button>
-              Получить консультацию
+            <div class="product__bottom">
+              <p class="product__descr">
+                Какое то интересное описание квартиры, что есть, сколько до метро и так далее
+              </p>
+              <div class="product__btn">
+                <button class="btn btn--secondary"
+                        data-hystmodal="#form-request-modal">
+                  <svg width="12"
+                       height="24"
+                       aria-hidden="true">
+                    <use xlink:href="img/sprite.svg#icon-slider-next"></use>
+                  </svg>
+                </button>
+                Получить консультацию
+              </div>
             </div>
           </div>
+
         </article>
       </li>
 
