правка страниц с недвижимостью

--- a/src/html/pages/secondary-housing/products.html
+++ b/src/html/pages/secondary-housing/products.html
@@ -3,7 +3,7 @@
 
     <ul class="products__list">
 
-      <li>
+      <li class="products__item">
         <article class="product">
 
           <div class="swiper product__slider">
@@ -60,7 +60,7 @@
         </article>
       </li>
 
-      <li>
+      <li class="products__item">
         <article class="product">
 
           <div class="swiper product__slider">
@@ -117,7 +117,7 @@
         </article>
       </li>
 
-      <li>
+      <li class="products__item">
         <article class="product">
 
           <div class="swiper product__slider">
@@ -174,7 +174,7 @@
         </article>
       </li>
 
-      <li>
+      <li class="products__item">
         <article class="product">
 
           <div class="swiper product__slider">
@@ -231,7 +231,7 @@
         </article>
       </li>
 
-      <li>
+      <li class="products__item">
         <article class="product">
 
           <div class="swiper product__slider">
@@ -288,7 +288,235 @@
         </article>
       </li>
 
-      <li>
+      <li class="products__item">
+        <article class="product">
+
+          <div class="swiper product__slider">
+            <!-- Additional required wrapper -->
+            <div class="swiper-wrapper">
+              <!-- Slides -->
+              <div class="swiper-slide">
+                <img src="./img/img-product-1.png"
+                     alt="">
+              </div>
+              <div class="swiper-slide">
+                <img src="./img/img-product-2.png"
+                     alt="">
+              </div>
+              <div class="swiper-slide">
+                <img src="./img/img-product-1.png"
+                     alt="">
+              </div>
+
+            </div>
+
+
+
+          </div>
+
+          <div class="product__info">
+
+            <div class="product__middle">
+              <div class="swiper-pagination"></div>
+              <div class="product__row">
+                <h3 class="product__title">New World</h3>
+                <span class="product__price">от 4 млн ₽</span>
+              </div>
+              <div class="product__additional">273 квартиры в продаже</div>
+            </div>
+            <div class="product__bottom">
+              <p class="product__descr">
+                Какое то интересное описание квартиры, что есть, сколько до метро и так далее
+              </p>
+              <div class="product__btn">
+                <button class="btn btn--secondary"
+                        data-hystmodal="#form-request-modal">
+                  <svg width="12"
+                       height="24"
+                       aria-hidden="true">
+                    <use xlink:href="img/sprite.svg#icon-slider-next"></use>
+                  </svg>
+                </button>
+                Получить консультацию
+              </div>
+            </div>
+          </div>
+
+        </article>
+      </li>
+
+      <li class="products__item">
+        <article class="product">
+
+          <div class="swiper product__slider">
+            <!-- Additional required wrapper -->
+            <div class="swiper-wrapper">
+              <!-- Slides -->
+              <div class="swiper-slide">
+                <img src="./img/img-product-1.png"
+                     alt="">
+              </div>
+              <div class="swiper-slide">
+                <img src="./img/img-product-2.png"
+                     alt="">
+              </div>
+              <div class="swiper-slide">
+                <img src="./img/img-product-1.png"
+                     alt="">
+              </div>
+
+            </div>
+
+
+
+          </div>
+
+          <div class="product__info">
+
+            <div class="product__middle">
+              <div class="swiper-pagination"></div>
+              <div class="product__row">
+                <h3 class="product__title">New World</h3>
+                <span class="product__price">от 4 млн ₽</span>
+              </div>
+              <div class="product__additional">273 квартиры в продаже</div>
+            </div>
+            <div class="product__bottom">
+              <p class="product__descr">
+                Какое то интересное описание квартиры, что есть, сколько до метро и так далее
+              </p>
+              <div class="product__btn">
+                <button class="btn btn--secondary"
+                        data-hystmodal="#form-request-modal">
+                  <svg width="12"
+                       height="24"
+                       aria-hidden="true">
+                    <use xlink:href="img/sprite.svg#icon-slider-next"></use>
+                  </svg>
+                </button>
+                Получить консультацию
+              </div>
+            </div>
+          </div>
+
+        </article>
+      </li>
+
+      <li class="products__item">
+        <article class="product">
+
+          <div class="swiper product__slider">
+            <!-- Additional required wrapper -->
+            <div class="swiper-wrapper">
+              <!-- Slides -->
+              <div class="swiper-slide">
+                <img src="./img/img-product-1.png"
+                     alt="">
+              </div>
+              <div class="swiper-slide">
+                <img src="./img/img-product-2.png"
+                     alt="">
+              </div>
+              <div class="swiper-slide">
+                <img src="./img/img-product-1.png"
+                     alt="">
+              </div>
+
+            </div>
+
+
+
+          </div>
+
+          <div class="product__info">
+
+            <div class="product__middle">
+              <div class="swiper-pagination"></div>
+              <div class="product__row">
+                <h3 class="product__title">New World</h3>
+                <span class="product__price">от 4 млн ₽</span>
+              </div>
+              <div class="product__additional">273 квартиры в продаже</div>
+            </div>
+            <div class="product__bottom">
+              <p class="product__descr">
+                Какое то интересное описание квартиры, что есть, сколько до метро и так далее
+              </p>
+              <div class="product__btn">
+                <button class="btn btn--secondary"
+                        data-hystmodal="#form-request-modal">
+                  <svg width="12"
+                       height="24"
+                       aria-hidden="true">
+                    <use xlink:href="img/sprite.svg#icon-slider-next"></use>
+                  </svg>
+                </button>
+                Получить консультацию
+              </div>
+            </div>
+          </div>
+
+        </article>
+      </li>
+
+      <li class="products__item">
+        <article class="product">
+
+          <div class="swiper product__slider">
+            <!-- Additional required wrapper -->
+            <div class="swiper-wrapper">
+              <!-- Slides -->
+              <div class="swiper-slide">
+                <img src="./img/img-product-1.png"
+                     alt="">
+              </div>
+              <div class="swiper-slide">
+                <img src="./img/img-product-2.png"
+                     alt="">
+              </div>
+              <div class="swiper-slide">
+                <img src="./img/img-product-1.png"
+                     alt="">
+              </div>
+
+            </div>
+
+
+
+          </div>
+
+          <div class="product__info">
+
+            <div class="product__middle">
+              <div class="swiper-pagination"></div>
+              <div class="product__row">
+                <h3 class="product__title">New World</h3>
+                <span class="product__price">от 4 млн ₽</span>
+              </div>
+              <div class="product__additional">273 квартиры в продаже</div>
+            </div>
+            <div class="product__bottom">
+              <p class="product__descr">
+                Какое то интересное описание квартиры, что есть, сколько до метро и так далее
+              </p>
+              <div class="product__btn">
+                <button class="btn btn--secondary"
+                        data-hystmodal="#form-request-modal">
+                  <svg width="12"
+                       height="24"
+                       aria-hidden="true">
+                    <use xlink:href="img/sprite.svg#icon-slider-next"></use>
+                  </svg>
+                </button>
+                Получить консультацию
+              </div>
+            </div>
+          </div>
+
+        </article>
+      </li>
+
+      <li class="products__item">
         <article class="product">
 
           <div class="swiper product__slider">
@@ -347,6 +575,7 @@
 
     </ul>
 
-    <button class="btn btn--primary d-sm-none">Показать больше</button>
+    <button id="show-more"
+            class="btn btn--primary">Показать больше</button>
   </div>
 </section>
